--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
-host = localhost
+host = 192.168.1.33
 port = 3000
-code_screen = 54e9f5397049357e0f000008
-url = /Users/cobos/Documents/TFG/Software/templates/
+code_screen = 54ee0214770f19e714000006
+url = /home/odroid/screen_odroid/templates/
 
