get playlist and download files

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
-host = 192.168.1.33
+host = localhost
 port = 3000
-code_screen = 54ee0214770f19e714000006
-url = /home/odroid/screen_odroid/templates/
+code_screen = 54f48a03d80a2f210800000d
+url = /Users/cobos/Documents/TFG/Software/templates/
+url_assets = /Users/cobos/Documents/TFG/Software/playlist
 
