changes in url now are not required in config file

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,5 @@
 [DEFAULT]
-host = localhost
+host = 192.168.1.33
 port = 3000
-code_screen = 54f48a03d80a2f210800000d
-url = /Users/cobos/Documents/TFG/Software/templates/
-url_assets = /Users/cobos/Documents/TFG/Software/playlist
+code_screen = 
 
