changed strategy of all content + installation script

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [DEFAULT]
 host = 192.168.1.33
 port = 3000
-code_screen = 5512dbc1565c41590400000b
+active = 0
+code_screen = 55290d4f16fcee350e00000e
 
