--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
-host = 192.168.1.33
+host = 192.168.1.36
 port = 3000
 active = 0
-code_screen = 55290d4f16fcee350e00000e
-
+code_screen =
+playing_now =
