--- a/installation/supervisor_impactScreen.conf
+++ b/installation/supervisor_impactScreen.conf
@@ -6,11 +6,11 @@ user=odroid
 autostart=true
 autorestart=true
 redirect_stderr=true
-stdout_logfile=/var/log/supervisor/impactScreen-access.log
+stdout_logfile=/var/log/supervisor/impactScreen-bottle.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
-stderr_logfile=/var/log/supervisor/impactScreen-error.log
+stderr_logfile=/var/log/supervisor/impactScreen-bottle.err
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 stderr_capture_maxbytes=1MB
